style+sliders wip

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>   
     <header>
     <img class="logo" src="./img/adidaslogo.png" alt="Logotipas">
+    <div class="top-bar">
         <nav class="header-nav">
             <a href="#">Home</a>
             <a href="#">He's</a>
@@ -26,17 +27,20 @@
             <a href="#"><i class="fa fa-shopping-cart"></i></a>
             <a href="#"><i class="fa fa-user"></i></a>
         </div>
+    </div>
 </header>
     <main>
         <div class="text-block">
             <h1>adidas shoes</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident asperiores aliquam nemo!</p>
-            <h4 class="price">$150.00</h4>
+            <p class="price">$150.00</9>
         </div>
         <a href="#" class="button">
             <span>shop now</span>
-            <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </a>
+         <div class="arrow-button">
+            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+         </div>
          <img class="main-img" src="./img/shoes.png" alt="Shoes">  
          <nav class="socials-nav">
              <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
