--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
 </header>
     <main>
+        <div class="shoe-numbers">01.</div>
         <div class="text-block">
             <h1>adidas shoes</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident asperiores aliquam nemo!</p>
@@ -38,10 +39,10 @@
         <a href="#" class="button">
             <span>shop now</span>
         </a>
-         <div class="arrow-button">
+         <a href=""><div class="arrow-button">
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
-         </div>
-         <img class="main-img" src="./img/shoes.png" alt="Shoes">  
+         </div></a>
+         <img class="main-img" src="./img/shoes2.png" alt="Shoes">  
          <nav class="socials-nav">
              <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
              <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
